--- a/style.css
+++ b/style.css
@@ -1,23 +1,34 @@
-.menu{
-  color: #402E2A;
-  background-color: #D5B0AC;
-  font-weight: bold;
+.menu {
+  background: #D5B0AC;
   text-align: center;
-}
-.menu span {
-  display: inline-block;
-  line-height: 30px;
-  width: 100px;
-}
-.menu span:hover{
-  background-color: #9CD08F;
-  color: #FFFFFF;
 }
 
 .menu_vertical {
   width: 100px;
+  background: transparent;
+  display: none;
 }
 
 .menu_vertical span {
-  border: 1px solid #FFFFFF;
+  margin-top: 1px;
+}
+
+span {
+  background: #D5B0AC;
+  line-height: 30px;
+  font-weight: bold;
+  color: #402E2A;
+  width: 100px;
+  display: inline-block;
+}
+
+span:hover {
+  color: #FFFFFF;
+  background: #9CD08F;
+  cursor: pointer;
+}
+
+span:hover .menu_vertical {
+  display: block;
+  position: absolute;
 }
